// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Badge > should match snapshot for danger variant 1`] = `
<div
  class="uppercase inline-flex items-center justify-center rounded px-3 py-2 text-xs font-semibold transition-colors gap-2 bg-danger text-danger-100"
>
  Test
</div>
`;

exports[`Badge > should match snapshot for default variant 1`] = `
<div
  class="uppercase inline-flex items-center justify-center rounded px-3 py-2 text-xs font-semibold transition-colors gap-2 bg-secondary text-primary-100"
>
  Test
</div>
`;

exports[`Badge > should match snapshot for outline variant 1`] = `
<div
  class="uppercase inline-flex items-center justify-center rounded px-3 py-2 text-xs font-semibold transition-colors gap-2 border-2 border-primary-100 text-primary-100"
>
  Test
</div>
`;

exports[`Badge > should match snapshot for secondary variant 1`] = `
<div
  class="uppercase inline-flex items-center justify-center rounded px-3 py-2 text-xs font-semibold transition-colors gap-2 bg-primary text-secondary-100"
>
  Test
</div>
`;

exports[`Badge > should match snapshot for success variant 1`] = `
<div
  class="uppercase inline-flex items-center justify-center rounded px-3 py-2 text-xs font-semibold transition-colors gap-2 bg-success text-success-100"
>
  Test
</div>
`;

exports[`Badge > should match snapshot for warning variant 1`] = `
<div
  class="uppercase inline-flex items-center justify-center rounded px-3 py-2 text-xs font-semibold transition-colors gap-2 bg-warning text-warning-100"
>
  Test
</div>
`;
